add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/core)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/usbx_device_classes)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/usbx_host_classes)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/usbx_host_controllers)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/usbx_network)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/usbx_pictbridge)
